improve alignment coy and logo and fix problems with mobile version

--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -14,7 +14,7 @@
 }
 
 .copyright {
-    //display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     color: $greycopyright;
@@ -52,8 +52,7 @@
 .box-logo-adalab {
     display: block;
     height: 45px; 
-    width: 200px;
-    
+    text-align: center; 
     background: url(../images/logo-adalab.png); /* cambié la imagen a fondo porque era más fácil controlarla */
     background-size: contain;
     background-repeat: no-repeat;
