--- a/_src/assets/scss/layout/_mqtablet.scss
+++ b/_src/assets/scss/layout/_mqtablet.scss
@@ -140,8 +140,9 @@
         color: $greycopyright;
         font-size:14px;
         font-family: Rubik; 
+        width: 200px;
         margin: 10px; 
-        margin-left: 60px;
+        margin-left: 30px;
         margin-top: 50px;
         // position: absolute;
         // left: 45px;
@@ -153,8 +154,6 @@
         justify-content: left;
         text-align: left;
         
-        
-
         }
     .box-logo-adalab{
         // margin-bottom:45px;
@@ -175,7 +174,7 @@
         // CENTRANDO CON GRID:
         // display: inline-block;
         margin:0px;
-        margin-left: 60px;
+        margin-left: 50px;
         justify-content: center;
         text-align: left;
 
